refactor: generate api redy for auth loginClient
