# backend-main/src/modules/auth/dto/response.dto.ts
@@ -1,3 +1,4 @@
+import { ApiProperty } from '@nestjs/swagger';
 import { HttpStatus } from '@nestjs/common';
 import { Types } from 'mongoose';
 
@@ -8,3 +9,13 @@ export type AuthResponse = {
   accessToken?: string;
   refreshToken?: string;
 };
+
+
+export class MessageResponseDto {
+  @ApiProperty({ example: "Le code a été envoyé au numéro 034732..." })
+  message: string;
+
+  constructor(message: string) {
+    this.message = message;
+  }
+}
